syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "DownloadRequestResponse";

message DownloadRequestResponseDetail {
  string fileName = 1;
  uint64 packetNumber = 2;
  bool dataAvailable = 3;
  bytes packetData = 4;
}