syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "SetupForFileResponse";

message SetupForFileResponseDetails {
  string senderName = 1;
  string fileName = 2;
}